# taple-ffi

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SUPPORT.md  uniffi.toml
UniFFI/: Cargo.toml  Readme.md  build.rs
UniFFI-Bindgen/: Cargo.toml
UniFFI/src/: lib.rs  subject_builder.rs  taple_sdk.udl
UniFFI/src/models/: role.rs  schema.rs  validation_proof.rs
scripts/android/: setup-android.sh  start-android.sh
scripts/ios/: start-ios.sh
scripts/ios/resources/: Package.swift
src/: api.rs  lib.rs  node.rs  settings.rs  subject_builder.rs  taple_uniffi.udl
src/models/: others.rs  signature.rs  user_subject.rs
taple-uniffi/: Cargo.toml  build.rs  uniffi.toml
taple-uniffi/src/: api.rs  db.rs  error.rs  node.rs  settings.rs  taple_uniffi.udl
taple-uniffi/src/models/: approval.rs  event.rs  others.rs  policy.rs  signature.rs  user_governance.rs
taple/src/: error.rs  node.rs  shutdown.rs
taple/src/models/: approval_entity.rs  mod.rs
taple/src/sqlite/: mod.rs
taple_ffi/: Cargo.toml  build.rs
taple_ffi/src/: lib.rs  notification.rs  taple_ffi.udl
taple_ffi/src/models/: request.rs  user_subject.rs
uniffi-bindgen/: Cargo.toml
