[package]
name = "taple-ffi"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "taple_ffi"
#staticlib es necesario para IOS
crate_type = ["cdylib","staticlib"] 

[dependencies]
hex = "~0.4.3"
# uniffi = "0.24.0"
uniffi = "0.23.0"

android_logger = {version = "0.13.3", optional = true}
oslog = {version = "0.2.0", optional = true}

log = { version = "~0.4" }
taple-core = { path = "../../taple-core/core" }
tokio = { version = "~1.20", features = ["sync", "rt-multi-thread"] }
thiserror = "~1.0"
serde = { version = "^1.0.100", default-features = false }
serde_json = { version = "^1.0.97" }
borsh = "~0.10.3"

[package.metadata.cross.build.env]
volumes = ["__LIB12_DEP=../../taple-core"]

[build-dependencies]
uniffi = { version = "0.23.0", features = ["build"] }

[features]
android = ["dep:android_logger"]
ios = ["dep:oslog"]
